--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
         <script src="scripts/etyssa/etyssa.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/poc/main.js"></script>
+        <script src="scripts/poc/entry.js"></script>
         <script src="scripts/poc/about.js"></script>
         <!-- endbuild -->
 </body>
