--- a/app/index.html
+++ b/app/index.html
@@ -25,14 +25,13 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
+          <li class="active"><a ng-href="#">Search</a></li>
+          <li><a ng-href="#/overview">Overview</a></li>
           <li><a ng-href="#/about">About</a></li>
         </ul>
         <h3 class="text-muted">Etyssa</h3>
       </div>
-
       <div ng-view=""></div>
-      <button>coucou</button>
       <div class="footer">
         <p>Built with <span class="fa fa-heart"></span> by the Etyssa team</p>
       </div>
