--- a/app/index.html
+++ b/app/index.html
@@ -22,13 +22,17 @@
 
     <!-- Add your site or application content here -->
 
-    <nav class="top-bar" data-topbar role="navigation">
+    <nav class="top-bar" data-topbar role="navigation" data-options="is_hover: false">
       <ul class="title-area">
 	<li class="name">
 	  <h1><a href="#">Etyssa</a></h1>
 	</li>
 	<!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-	<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+	<li class="toggle-topbar menu-icon">
+	  <a href="#">
+	    <span>Menu</span>
+	  </a>
+	</li>
       </ul>
 
       <section class="top-bar-section">
@@ -54,6 +58,12 @@
     <div class="row">
       <div class="small-2 columns">
 	<img src="images/logo.png">
+	<ul>
+	  <li><a ng-href="#/overview">Overview</a></li>
+	  <li><a ng-href="#/entry">About</a></li>
+	  <li><a ng-href="#/main">Overview</a></li>
+	  <li><a ng-href="#/about">About</a></li>
+	</ul>
       </div>
       <div class="small-10 columns">
 	<div ng-view=""></div>
