--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,8 @@
             <a href="#">Menu</a>
             <ul class="dropdown">
 	      <li><a ng-href="#/overview">Overview</a></li>
+	      <li><a ng-href="#/entry">Entry</a></li>
+	      <li><a ng-href="#/main">Main</a></li>
 	      <li><a ng-href="#/about">About</a></li>
             </ul>
 	  </li>
@@ -57,12 +59,7 @@
 
     <div class="row">
       <div class="small-2 columns">
-	<img src="images/logo.png">
 	<ul>
-	  <li><a ng-href="#/overview">Overview</a></li>
-	  <li><a ng-href="#/entry">About</a></li>
-	  <li><a ng-href="#/main">Overview</a></li>
-	  <li><a ng-href="#/about">About</a></li>
 	</ul>
       </div>
       <div class="small-10 columns">
