settings for etyssa module

--- a/app/index.html
+++ b/app/index.html
@@ -113,8 +113,9 @@
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/etyssa/etyssa.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/etyssa/etyssa.js"></script>
+    <script src="scripts/etyssa/settings.js"></script>
     <script src="scripts/poc/main.js"></script>
     <script src="scripts/poc/entry.js"></script>
     <script src="scripts/poc/about.js"></script>
