--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,7 @@
     <script src="bower_components/leaflet/dist/leaflet.js"></script>
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
+    <script src="bower_components/checklist-model/checklist-model.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
