main renamed to search

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
     <script src="bower_components/checklist-model/checklist-model.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -75,7 +76,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/etyssa/etyssa.js"></script>
     <script src="scripts/etyssa/settings.js"></script>
-    <script src="scripts/poc/main.js"></script>
+    <script src="scripts/poc/search.js"></script>
     <script src="scripts/poc/entry.js"></script>
     <script src="scripts/poc/about.js"></script>
     <script src="scripts/poc/overview.js"></script>
