ui-state instead of route

--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,9 @@
     <!-- Add your site or application content here -->
 
     <!-- Header -->
-    <ng-include src="'scripts/poc/views/header.html'"></ng-include>
+    <ng-include src="'scripts/views/header.html'"></ng-include>
 
-    <div ng-view=""></div>
+    <div ui-view=""></div>
     
     <div class="footer">
       <p>Built with <span class="fa fa-heart"></span> by the Etyssa team</p>
@@ -76,10 +76,11 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/etyssa/etyssa.js"></script>
     <script src="scripts/etyssa/settings.js"></script>
-    <script src="scripts/poc/search.js"></script>
-    <script src="scripts/poc/entry.js"></script>
-    <script src="scripts/poc/about.js"></script>
-    <script src="scripts/poc/overview.js"></script>
+    <script src="scripts/search.js"></script>
+    <script src="scripts/entry.js"></script>
+    <script src="scripts/about.js"></script>
+    <script src="scripts/overview.js"></script>
+    <script src="scripts/states.js"></script>
     <!-- endbuild -->
 
 
