--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
     <script src="scripts/about.js"></script>
     <script src="scripts/overview.js"></script>
     <script src="scripts/states.js"></script>
-    <script src="scripts/directives/scroll-if.js"></script>
+    <script src="scripts/directives.js"></script>
     <!-- endbuild -->
 
 
