Basic Auth by httpinterceptor

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
     <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/cryptojslib/rollups/sha1.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -78,6 +79,7 @@
     <script src="scripts/etyssa/settings.js"></script>
     <script src="scripts/search.js"></script>
     <script src="scripts/about.js"></script>
+    <script src="scripts/profile.js"></script>
     <script src="scripts/overview.js"></script>
     <script src="scripts/states.js"></script>
     <script src="scripts/directives.js"></script>
