--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
     <div ui-view=""></div>
     
     <div class="footer">
-      <p>Built with <span class="fa fa-heart"></span> by the Etyssa team</p>
+      <p>Built with <span class="fa fa-heart"></span> by the Etyssa team in Berlin, Autumn 2014</p>
     </div>  
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
