--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,9 @@
 
     <div ui-view=""></div>
     
-    <div class="footer">
+    <footer class="footer">
       <p>Built with <span class="fa fa-heart"></span> by the Etyssa team in Berlin, Autumn 2014</p>
-    </div>  
+    </footer>  
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
