--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
     <script src="scripts/about.js"></script>
     <script src="scripts/profile.js"></script>
     <script src="scripts/overview.js"></script>
+    <script src="scripts/contact.js"></script>
     <script src="scripts/states.js"></script>
     <script src="scripts/directives.js"></script>
     <!-- endbuild -->
