More work on the about page. Footer style

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,11 @@
     <div ui-view=""></div>
     
     <footer class="footer">
-      <p>Built with <span class="fa fa-heart"></span> by the Etyssa team in Berlin, Autumn 2014</p>
+      <div class="row">
+	<div class="large-12 large-centered">
+	  <p>Built with <span class="fa fa-heart"></span> by the Etyssa team in Berlin, Autumn 2014</p>
+	</div>
+      </div>
     </footer>  
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
