Contact : trigger notification

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="bower_components/angular-notify/dist/angular-notify.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/app.css -->
@@ -74,6 +75,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/cryptojslib/rollups/sha1.js"></script>
+    <script src="bower_components/angular-notify/dist/angular-notify.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
